--- a/index.html
+++ b/index.html
@@ -1,64 +1,64 @@
 
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Historica Reisen – Zeitreisen erleben</title>
+    <title>Experiencing History</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
-        <div class="logo">Historica Reisen</div>
+        <div class="logo">Experiencing History</div>
         <nav>
             <ul>
-                <li><a href="#reisen">Reisen</a></li>
-                <li><a href="#über-uns">Über uns</a></li>
-                <li><a href="#kontakt">Kontakt</a></li>
+                <li><a href="#destinations">Destinations</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <section class="hero">
-        <h1>Erlebe Geschichte hautnah</h1>
-        <p>Reisen Sie zu den bedeutendsten Orten der Weltgeschichte mit Experten an Ihrer Seite.</p>
-        <a href="#reisen" class="btn">Jetzt entdecken</a>
+        <h1>Welcome to Experiencing History</h1>
+        <p>Join us on immersive journeys through Europe’s most powerful historical sites and stories.</p>
+        <a href="#destinations" class="btn">Explore Tours</a>
     </section>
 
-    <section id="reisen" class="reisen">
-        <h2>Unsere historischen Reiseziele</h2>
+    <section id="destinations" class="reisen">
+        <h2>Our Destinations</h2>
         <div class="reiseziele">
             <div class="reise">
-                <img src="rom.jpg" alt="Rom">
-                <h3>Antikes Rom</h3>
-                <p>Erleben Sie das Kolosseum, das Forum Romanum und die Macht des römischen Imperiums.</p>
+                <img src="anthropoid.jpg" alt="Anthropoid Tour">
+                <h3>Anthropoid Tour</h3>
+                <p>Discover the dramatic WWII resistance operation against Reinhard Heydrich in Prague.</p>
             </div>
             <div class="reise">
-                <img src="normandie.jpg" alt="Normandie">
-                <h3>D-Day Normandie</h3>
-                <p>Gehen Sie den Spuren der Alliierten Landung nach und besuchen Sie die historischen Strände.</p>
+                <img src="bloodlands.jpg" alt="Travelling the Bloodlands">
+                <h3>Travelling the Bloodlands</h3>
+                <p>Explore the territories between Nazi Germany and the Soviet Union, where millions perished.</p>
             </div>
             <div class="reise">
-                <img src="kairo.jpg" alt="Kairo">
-                <h3>Altes Ägypten</h3>
-                <p>Bewundern Sie die Pyramiden von Gizeh und das Tal der Könige mit fachkundiger Führung.</p>
+                <img src="revolutions.jpg" alt="Revolutions in Europe">
+                <h3>Revolutions in Europe</h3>
+                <p>Follow the uprisings and revolutions that shaped European nations in the 19th and 20th centuries.</p>
             </div>
         </div>
     </section>
 
-    <section id="über-uns" class="about">
-        <h2>Warum Historica Reisen?</h2>
-        <p>Wir kombinieren fundiertes historisches Wissen mit einzigartigen Reiseerlebnissen. Unsere Experten sind Historiker, Archäologen und leidenschaftliche Erzähler.</p>
+    <section id="about" class="about">
+        <h2>Why Choose Us?</h2>
+        <p>We offer history-based travel curated by experts in European conflict, resistance, and political change. Every journey is rich in story, reflection, and connection.</p>
     </section>
 
     <section class="cta">
-        <h2>Bereit für Ihre Zeitreise?</h2>
-        <a href="#kontakt" class="btn">Reise jetzt anfragen</a>
+        <h2>Ready to Experience History?</h2>
+        <a href="#contact" class="btn">Request a Tour</a>
     </section>
 
-    <footer id="kontakt">
-        <p>© 2025 Historica Reisen | Kontakt: info@historica-reisen.de</p>
+    <footer id="contact">
+        <p>© 2025 Experiencing History | Contact: info@experiencinghistory.com</p>
     </footer>
 
 </body>
